je n'utilise pas les ligne de commande

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-
+  <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos molestias at alias magnam labore sit magni porro
+    tempore eius consequuntur cumque itaque autem odit, culpa blanditiis illum et similique nisi!</p>
 </body>
 
 </html>
